--- a/Assignment-3/views/view.hbs
+++ b/Assignment-3/views/view.hbs
@@ -18,7 +18,8 @@
         <tr>
           <td>{{firstName}} {{lastName}}</td>
           <td>{{department}}</td>
-          <td>{{formatDate startDate}}</td>
+          <td>{{formatDate this.startDate}}</td>
+
 
 
           <td>{{jobTitle}}</td>
