--- a/Assignment-3/views/layouts/main.hbs
+++ b/Assignment-3/views/layouts/main.hbs
@@ -10,6 +10,11 @@
     <nav class="nav">
       <a href="/" class="nav__link">Add Employee</a>
       <a href="/employees" class="nav__link">View Employees</a>
+
+      <a href="/register" class="nav__link">Register</a>
+      <a href="/login" class="nav__link">Login</a>
+      <a href="/logout" class="nav__link">Logout</a>
+      <a href="/dashboard" class="nav__link">Dashboard</a>
     </nav>
 
     <main class="container">
